fixed overlapped part of side-panel

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 #navbar {
-  height: 61px;
+  height: 65px;
 }
 
 .navbar {
